--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlanDevUse</title>
-</head>
-<body>
-    Hello, world
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles/globals.css" />
+        <link rel="stylesheet" href="styles/button.css" />
+        <link rel="stylesheet" href="styles/timer.css" />
+        <link rel="stylesheet" href="styles/sonner.css" />
+        <title>PlanDevUse</title>
+    </head>
+    <body>
+        <header class="header">
+            <section class="header-left-section">
+                <h1>PlanDevUse</h1>
+                <p class="description">
+                    PlanDevUse is a tool for planning and managing your time by
+                    dividing it to three timers. The main purpose is for
+                    software development (Planning, Development, and Using). But
+                    you can customize it however you want!
+                </p>
+            </section>
+            <section class="header-right-section">
+                <a href="https://github.com/Kent0710/PlanDevUse">
+                <button class="secondary-btn">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="16"
+                            height="16"
+                            fill="currentColor"
+                            viewBox="0 0 16 16"
+                            style="margin-right: 8px; vertical-align: middle"
+                        >
+                            <path
+                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.54 5.47 7.59.4.07.55-.17.55-.38
+                            0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13
+                            -.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07
+                            -.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15
+                            -.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82a7.59 7.59 0 012-.27c.68 0
+                            1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56
+                            .82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01
+                            1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                            />
+                        </svg>
+                        GitHub
+                    </button>
+                </a>
+            </section>
+        </header>
+
+        <section class="button-group">
+            <button class="primary-btn start-timer-btn">Start Timer</button>
+        </section>
+        <main>
+            <section class="timer-section">
+                <!-- Main  -->
+                <div class="timer-section-content">
+                    <div>
+                        <h4
+                            contenteditable="true"
+                            class="timer-section-content-label"
+                        >
+                            Planning
+                        </h4>
+                    </div>
+                    <div class="timer-section-content-countdown">
+                        <span class="first-hours-container timer-value">
+                            <button class="first-hours-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="first-hours-value">00</p>
+                            <button class="first-hours-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                        :
+                        <span class="first-minutes-container timer-value">
+                            <button class="first-minutes-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="first-minutes-value">00</p>
+                            <button class="first-minutes-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                        :
+                        <span class="first-seconds-container timer-value">
+                            <button class="first-seconds-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="first-seconds-value">00</p>
+                            <button class="first-seconds-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Center Section  -->
+            <section class="timer-section-content">
+                <div>
+                    <h4
+                        contenteditable="true"
+                        class="timer-section-content-label"
+                    >
+                        Development
+                    </h4>
+                </div>
+                <div class="timer-section-content-countdown">
+                    <!-- Second Hours  -->
+                    <span class="second-hours-container timer-value">
+                        <button class="second-hours-up-btn ghost-btn">^</button>
+                        <p class="second-hours-value">00</p>
+                        <button class="second-hours-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+                    :
+
+                    <!-- Second Minutes  -->
+                    <span class="second-minutes-container timer-value">
+                        <button class="second-minutes-up-btn ghost-btn">
+                            ^
+                        </button>
+                        <p class="second-minutes-value">00</p>
+                        <button class="second-minutes-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+
+                    :
+                    <!-- Second Seconds  -->
+                    <span class="second-seconds-container timer-value">
+                        <button class="second-seconds-up-btn ghost-btn">
+                            ^
+                        </button>
+                        <p class="second-seconds-value">00</p>
+                        <button class="second-seconds-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+                </div>
+            </section>
+
+            <!-- Right Section  -->
+            <section class="timer-section-content">
+                <div>
+                    <h4
+                        contenteditable="true"
+                        class="timer-section-content-label"
+                    >
+                        Using
+                    </h4>
+                </div>
+                <div class="timer-section-content-countdown">
+                    <span class="third-hours-container timer-value">
+                        <button class="third-hours-up-btn ghost-btn">^</button>
+                        <p class="third-hours-value">00</p>
+                        <button class="third-hours-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+                    :
+                    <span class="third-minutes-container timer-value">
+                        <button class="third-minutes-up-btn ghost-btn">
+                            ^
+                        </button>
+                        <p class="third-minutes-value">00</p>
+                        <button class="third-minutes-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+                    :
+                    <span class="third-seconds-container timer-value">
+                        <button class="third-seconds-up-btn ghost-btn">
+                            ^
+                        </button>
+                        <p class="third-seconds-value">00</p>
+                        <button class="third-seconds-down-btn ghost-btn">
+                            v
+                        </button>
+                    </span>
+                </div>
+            </section>
+        </main>
+    </body>
+
+    <script src="./scripts/index.js" type="module"></script>
 </html>
