feat: sonner like block when timer finish

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </section>
             <section class="header-right-section">
                 <a href="https://github.com/Kent0710/PlanDevUse">
-                <button class="secondary-btn">
+                    <button class="secondary-btn">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="16"
@@ -52,9 +52,9 @@
             <button class="primary-btn start-timer-btn">Start Timer</button>
         </section>
         <main>
-            <section class="timer-section">
-                <!-- Main  -->
-                <div class="timer-section-content">
+            <div class="sub-main">
+                <section class="timer-section-content">
+                    <!-- Main  -->
                     <div>
                         <h4
                             contenteditable="true"
@@ -94,95 +94,99 @@
                             </button>
                         </span>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <!-- Center Section  -->
-            <section class="timer-section-content">
-                <div>
-                    <h4
-                        contenteditable="true"
-                        class="timer-section-content-label"
-                    >
-                        Development
-                    </h4>
-                </div>
-                <div class="timer-section-content-countdown">
-                    <!-- Second Hours  -->
-                    <span class="second-hours-container timer-value">
-                        <button class="second-hours-up-btn ghost-btn">^</button>
-                        <p class="second-hours-value">00</p>
-                        <button class="second-hours-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
-                    :
+                <!-- Center Section  -->
+                <section class="timer-section-content">
+                    <div>
+                        <h4
+                            contenteditable="true"
+                            class="timer-section-content-label"
+                        >
+                            Development
+                        </h4>
+                    </div>
+                    <div class="timer-section-content-countdown">
+                        <!-- Second Hours  -->
+                        <span class="second-hours-container timer-value">
+                            <button class="second-hours-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="second-hours-value">00</p>
+                            <button class="second-hours-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                        :
 
-                    <!-- Second Minutes  -->
-                    <span class="second-minutes-container timer-value">
-                        <button class="second-minutes-up-btn ghost-btn">
-                            ^
-                        </button>
-                        <p class="second-minutes-value">00</p>
-                        <button class="second-minutes-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
+                        <!-- Second Minutes  -->
+                        <span class="second-minutes-container timer-value">
+                            <button class="second-minutes-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="second-minutes-value">00</p>
+                            <button class="second-minutes-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
 
-                    :
-                    <!-- Second Seconds  -->
-                    <span class="second-seconds-container timer-value">
-                        <button class="second-seconds-up-btn ghost-btn">
-                            ^
-                        </button>
-                        <p class="second-seconds-value">00</p>
-                        <button class="second-seconds-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
-                </div>
-            </section>
+                        :
+                        <!-- Second Seconds  -->
+                        <span class="second-seconds-container timer-value">
+                            <button class="second-seconds-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="second-seconds-value">00</p>
+                            <button class="second-seconds-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                    </div>
+                </section>
 
-            <!-- Right Section  -->
-            <section class="timer-section-content">
-                <div>
-                    <h4
-                        contenteditable="true"
-                        class="timer-section-content-label"
-                    >
-                        Using
-                    </h4>
-                </div>
-                <div class="timer-section-content-countdown">
-                    <span class="third-hours-container timer-value">
-                        <button class="third-hours-up-btn ghost-btn">^</button>
-                        <p class="third-hours-value">00</p>
-                        <button class="third-hours-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
-                    :
-                    <span class="third-minutes-container timer-value">
-                        <button class="third-minutes-up-btn ghost-btn">
-                            ^
-                        </button>
-                        <p class="third-minutes-value">00</p>
-                        <button class="third-minutes-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
-                    :
-                    <span class="third-seconds-container timer-value">
-                        <button class="third-seconds-up-btn ghost-btn">
-                            ^
-                        </button>
-                        <p class="third-seconds-value">00</p>
-                        <button class="third-seconds-down-btn ghost-btn">
-                            v
-                        </button>
-                    </span>
-                </div>
-            </section>
+                <!-- Right Section  -->
+                <section class="timer-section-content">
+                    <div>
+                        <h4
+                            contenteditable="true"
+                            class="timer-section-content-label"
+                        >
+                            Using
+                        </h4>
+                    </div>
+                    <div class="timer-section-content-countdown">
+                        <span class="third-hours-container timer-value">
+                            <button class="third-hours-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="third-hours-value">00</p>
+                            <button class="third-hours-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                        :
+                        <span class="third-minutes-container timer-value">
+                            <button class="third-minutes-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="third-minutes-value">00</p>
+                            <button class="third-minutes-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                        :
+                        <span class="third-seconds-container timer-value">
+                            <button class="third-seconds-up-btn ghost-btn">
+                                ^
+                            </button>
+                            <p class="third-seconds-value">00</p>
+                            <button class="third-seconds-down-btn ghost-btn">
+                                v
+                            </button>
+                        </span>
+                    </div>
+                </section>
+            </div>
         </main>
     </body>
 
