--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,56 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PlanDevUse</title>
+
+        <!-- SEO Meta Description -->
+        <meta
+            name="description"
+            content="PlanDevUse is a tool for planning and managing your time using three timers: Planning, Development, and Using. Fully customizable for software development or personal use."
+        />
+
+        <!-- Favicon -->
+        <link
+            rel="icon"
+            href="./images/plan-dev-use-logo.png"
+            type="image/png"
+        />
+        <link
+            rel="shortcut icon"
+            href="./images/plan-dev-use-logo.ico"
+            type="image/x-icon"
+        />
+
+        <!-- Apple Touch Icon -->
+        <link rel="apple-touch-icon" href="./images/plan-dev-use-logo.png" />
+
+        <!-- Theme Color for Mobile Browsers -->
+        <meta name="theme-color" content="#0046FF" />
+
+        <!-- Open Graph / Social Sharing -->
+        <meta property="og:title" content="PlanDevUse" />
+        <meta
+            property="og:description"
+            content="PlanDevUse helps you manage your time effectively with three customizable timers."
+        />
+        <meta property="og:image" content="./images/plan-dev-use-logo.png" />
+        <meta property="og:url" content="https://yourwebsite.com/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="PlanDevUse" />
+        <meta
+            name="twitter:description"
+            content="PlanDevUse helps you manage your time effectively with three customizable timers."
+        />
+        <meta name="twitter:image" content="./images/plan-dev-use-logo.png" />
+
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="styles/globals.css" />
         <link rel="stylesheet" href="styles/button.css" />
         <link rel="stylesheet" href="styles/timer.css" />
         <link rel="stylesheet" href="styles/sonner.css" />
-        <title>PlanDevUse</title>
     </head>
     <body>
         <header class="header">
